k8s-configs/k8s/authentication_service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service
  labels:
    app: authentication-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: authentication-service
  template:
    metadata:
      labels:
        app: authentication-service
    spec:
      containers:
         name: authentication-service
          image: authentication-service:latest
          ports:
            - containerPort: 8082
