k8s-configs/k8s/authentication_service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  annotations:
    kubernetes.digitalocean.com/load-balancer-id: "fra1-load-balancer-01"
    service.beta.kubernetes.io/do-loadbalancer-size-unit: "1"
    service.beta.kubernetes.io/do-loadbalancer-disable-lets-encrypt-dns-records: "false"
spec:
  type: LoadBalancer
  selector:
    app: authentication-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
