k8s-configs/k8s/authentication_service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
spec:
  selector:
    app: authentication-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
