k8s-configs/k8s/authentication_service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
    - host: k8s.test-service.com
    - http:
        paths:
          - path: /authentication-service
            pathType: Prefix
            backend:
              service:
                name: authentication-service
                port:
                  number: 8080
